<resources>
    <string name="app_name">Contador</string>
    <string name="counterapp">CounterApp</string>
    <string name="_0">0</string>
    <string name="increment">Increment</string>
    <string name="decrement">Decrement</string>
    <string name="reset">Reset</string>
    <string name="increment_counter">Increment Counter</string>
    <string name="decrement_counter">Decrement Counter</string>
</resources>